// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree view Breadcrumb component When Breadcrumb is mounted renders Breadcrumb button content correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        css="[object Object]"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-1"
            style="flex-direction: row; align-items: center;"
          >
            <span
              data-euiicon-type="cluster"
              style="color: rgb(84, 179, 153);"
            />
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                class="euiButtonEmpty emotion-EuiButtonEmpty"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    selected cluster name
                  </span>
                </span>
              </button>
            </span>
            <span
              class="emotion-EuiIcon"
              data-euiicon-type="arrowRight"
            />
            <span
              data-euiicon-type="namespace"
              style="color: rgb(96, 146, 192);"
            />
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                class="euiButtonEmpty emotion-EuiButtonEmpty"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    selected namespace
                  </span>
                </span>
              </button>
            </span>
            <span
              class="emotion-EuiIcon"
              data-euiicon-type="arrowRight"
            />
            <span
              data-euiicon-type="kubernetesPod"
              style="color: rgb(231, 102, 76);"
            />
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                class="euiButtonEmpty emotion-EuiButtonEmpty"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    selected pod
                  </span>
                </span>
              </button>
            </span>
            <span
              class="emotion-EuiIcon"
              data-euiicon-type="arrowRight"
            />
            <span
              data-euiicon-type="container"
              style="color: rgb(170, 101, 86);"
            />
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                class="euiButtonEmpty emotion-EuiButtonEmpty"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    selected image
                  </span>
                </span>
              </button>
            </span>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                class="euiButtonEmpty css-9t7nyf-empty-primary"
                data-test-subj="kubernetesSecurity:kubernetesSecurityResponseAction"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Respond
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      css="[object Object]"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
          style="flex-direction: row; align-items: center;"
        >
          <span
            data-euiicon-type="cluster"
            style="color: rgb(84, 179, 153);"
          />
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              class="euiButtonEmpty emotion-EuiButtonEmpty"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  selected cluster name
                </span>
              </span>
            </button>
          </span>
          <span
            class="emotion-EuiIcon"
            data-euiicon-type="arrowRight"
          />
          <span
            data-euiicon-type="namespace"
            style="color: rgb(96, 146, 192);"
          />
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              class="euiButtonEmpty emotion-EuiButtonEmpty"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  selected namespace
                </span>
              </span>
            </button>
          </span>
          <span
            class="emotion-EuiIcon"
            data-euiicon-type="arrowRight"
          />
          <span
            data-euiicon-type="kubernetesPod"
            style="color: rgb(231, 102, 76);"
          />
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              class="euiButtonEmpty emotion-EuiButtonEmpty"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  selected pod
                </span>
              </span>
            </button>
          </span>
          <span
            class="emotion-EuiIcon"
            data-euiicon-type="arrowRight"
          />
          <span
            data-euiicon-type="container"
            style="color: rgb(170, 101, 86);"
          />
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              class="euiButtonEmpty emotion-EuiButtonEmpty"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  selected image
                </span>
              </span>
            </button>
          </span>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              class="euiButtonEmpty css-9t7nyf-empty-primary"
              data-test-subj="kubernetesSecurity:kubernetesSecurityResponseAction"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  Respond
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tree view Breadcrumb component When Breadcrumb is mounted should display cluster icon button when no cluster name is provided 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        css="[object Object]"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-1"
            style="flex-direction: row; align-items: center;"
          >
            <span
              data-euiicon-type="cluster"
              style="color: rgb(84, 179, 153);"
            />
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                class="euiButtonEmpty emotion-EuiButtonEmpty"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    selected cluster name
                  </span>
                </span>
              </button>
            </span>
            <span
              class="emotion-EuiIcon"
              data-euiicon-type="arrowRight"
            />
            <span
              data-euiicon-type="kubernetesNode"
              style="color: rgb(145, 112, 184);"
            />
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                class="euiButtonEmpty emotion-EuiButtonEmpty"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    selected node
                  </span>
                </span>
              </button>
            </span>
            <span
              class="emotion-EuiIcon"
              data-euiicon-type="arrowRight"
            />
            <span
              data-euiicon-type="container"
              style="color: rgb(170, 101, 86);"
            />
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                class="euiButtonEmpty emotion-EuiButtonEmpty"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    selected image
                  </span>
                </span>
              </button>
            </span>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                class="euiButtonEmpty css-1at5a38-empty-disabled"
                data-test-subj="kubernetesSecurity:kubernetesSecurityResponseAction"
                disabled=""
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Respond
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      css="[object Object]"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
          style="flex-direction: row; align-items: center;"
        >
          <span
            data-euiicon-type="cluster"
            style="color: rgb(84, 179, 153);"
          />
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              class="euiButtonEmpty emotion-EuiButtonEmpty"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  selected cluster name
                </span>
              </span>
            </button>
          </span>
          <span
            class="emotion-EuiIcon"
            data-euiicon-type="arrowRight"
          />
          <span
            data-euiicon-type="kubernetesNode"
            style="color: rgb(145, 112, 184);"
          />
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              class="euiButtonEmpty emotion-EuiButtonEmpty"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  selected node
                </span>
              </span>
            </button>
          </span>
          <span
            class="emotion-EuiIcon"
            data-euiicon-type="arrowRight"
          />
          <span
            data-euiicon-type="container"
            style="color: rgb(170, 101, 86);"
          />
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              class="euiButtonEmpty emotion-EuiButtonEmpty"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  selected image
                </span>
              </span>
            </button>
          </span>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              class="euiButtonEmpty css-1at5a38-empty-disabled"
              data-test-subj="kubernetesSecurity:kubernetesSecurityResponseAction"
              disabled=""
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  Respond
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tree view Breadcrumb component When Breadcrumb is mounted should render breadcrumb icons 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        css="[object Object]"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-1"
            style="flex-direction: row; align-items: center;"
          >
            <span
              data-euiicon-type="cluster"
              style="color: rgb(84, 179, 153);"
            />
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                class="euiButtonEmpty emotion-EuiButtonEmpty"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    selected cluster id
                  </span>
                </span>
              </button>
            </span>
            <span
              class="emotion-EuiIcon"
              data-euiicon-type="arrowRight"
            />
            <span
              data-euiicon-type="namespace"
              style="color: rgb(96, 146, 192);"
            />
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                class="euiButtonEmpty emotion-EuiButtonEmpty"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    selected namespace
                  </span>
                </span>
              </button>
            </span>
            <span
              class="emotion-EuiIcon"
              data-euiicon-type="arrowRight"
            />
            <span
              data-euiicon-type="kubernetesPod"
              style="color: rgb(231, 102, 76);"
            />
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                class="euiButtonEmpty emotion-EuiButtonEmpty"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    selected pod
                  </span>
                </span>
              </button>
            </span>
            <span
              class="emotion-EuiIcon"
              data-euiicon-type="arrowRight"
            />
            <span
              data-euiicon-type="container"
              style="color: rgb(170, 101, 86);"
            />
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                class="euiButtonEmpty emotion-EuiButtonEmpty"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    selected image
                  </span>
                </span>
              </button>
            </span>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <button
                class="euiButtonEmpty css-9t7nyf-empty-primary"
                data-test-subj="kubernetesSecurity:kubernetesSecurityResponseAction"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Respond
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      css="[object Object]"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
          style="flex-direction: row; align-items: center;"
        >
          <span
            data-euiicon-type="cluster"
            style="color: rgb(84, 179, 153);"
          />
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              class="euiButtonEmpty emotion-EuiButtonEmpty"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  selected cluster id
                </span>
              </span>
            </button>
          </span>
          <span
            class="emotion-EuiIcon"
            data-euiicon-type="arrowRight"
          />
          <span
            data-euiicon-type="namespace"
            style="color: rgb(96, 146, 192);"
          />
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              class="euiButtonEmpty emotion-EuiButtonEmpty"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  selected namespace
                </span>
              </span>
            </button>
          </span>
          <span
            class="emotion-EuiIcon"
            data-euiicon-type="arrowRight"
          />
          <span
            data-euiicon-type="kubernetesPod"
            style="color: rgb(231, 102, 76);"
          />
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              class="euiButtonEmpty emotion-EuiButtonEmpty"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  selected pod
                </span>
              </span>
            </button>
          </span>
          <span
            class="emotion-EuiIcon"
            data-euiicon-type="arrowRight"
          />
          <span
            data-euiicon-type="container"
            style="color: rgb(170, 101, 86);"
          />
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              class="euiButtonEmpty emotion-EuiButtonEmpty"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  selected image
                </span>
              </span>
            </button>
          </span>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              class="euiButtonEmpty css-9t7nyf-empty-primary"
              data-test-subj="kubernetesSecurity:kubernetesSecurityResponseAction"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  Respond
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
